--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                   <a class="nav-link" href="#service"> Services </a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#contactLink">Contact Us</a>
+                  <a class="nav-link" href="#team">Team</a>
                 </li>
               </ul>
             </div>
@@ -303,7 +303,7 @@
 
   <section class="team_section layout_padding2-bottom">
     <div class="container">
-      <div class="heading_container">
+      <div class="heading_container" id="team">
         <h2>
           The Team
         </h2>
