perbaiki tab menu

--- a/index.html
+++ b/index.html
@@ -35,11 +35,7 @@
     <header class="header_section">
       <div class="container-fluid">
         <nav class="navbar navbar-expand-lg custom_nav-container ">
-          <a class="navbar-brand" href="index.html">
-            <span>
-              Hasindo
-            </span>
-          </a>
+          
           </a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="s-1"> </span>
@@ -47,35 +43,61 @@
             <span class="s-3"> </span>
           </button>
 
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <div class="d-flex mx-auto flex-column flex-lg-row align-items-center">
-              <ul class="navbar-nav  ">
-                <li class="nav-item active">
-                  <a class="nav-link" href="#home">Home <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#about"> About</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#service"> Services </a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#team">Team</a>
-                </li>
-              </ul>
-            </div>
-            <!-- <div class="quote_btn-container ">
-              <a href="">
-                <img src="images/call.png" alt="">
-                <span>
-                  Call : + 01 1234567890
-                </span>
-              </a>
-              <form class="form-inline">
-                <button class="btn  my-2 my-sm-0 nav_search-btn" type="submit"></button>
-              </form>
-            </div> -->
-          </div>
+          <div class="collapse navbar-collapse fixed-top" id="navbarSupportedContent" style="background-color: #041858;">
+  <div class="d-flex justify-content-between align-items-center w-100">
+    <!-- Brand berada di kiri -->
+    <a class="navbar-brand" href="index.html" style="margin-left: 20px;">
+      <span>
+        Hasindo
+      </span>
+    </a>
+
+    <!-- Menu navigasi di kanan -->
+    <ul class="navbar-nav d-flex flex-lg-row ml-auto">
+      <li class="nav-item active">
+        <a class="nav-link" href="#home">Home <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#about"> About</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#service"> Services </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#team">Team</a>
+      </li>
+    </ul>
+  </div>
+</div>
+<div class="collapse navbar-collapse fixed-top" id="navbarSupportedContent" style="background-color: #041858;">
+  <div class="d-flex justify-content-start align-items-center">
+    <!-- Brand berada di kiri -->
+    <a class="navbar-brand" href="index.html" style="margin-left: 20px;"> <!-- Menambahkan margin kiri -->
+      <span>
+        Hasindo
+      </span>
+    </a>
+
+    <!-- Menu navigasi di tengah -->
+    <div class="mx-auto"> <!-- Menambahkan div khusus untuk menu dan menerapkan mx-auto -->
+      <ul class="navbar-nav d-flex flex-lg-row">
+        <li class="nav-item active">
+          <a class="nav-link" href="#home">Home <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#about"> About</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#service"> Services </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#team">Team</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</div>
+
         </nav>
       </div>
     </header>
