--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
   <meta name="description" content="" />
   <meta name="author" content="" />
 
-  <title>Seotech</title>
+  <title>Hasindo</title>
 
   <!-- slider stylesheet -->
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.1.3/assets/owl.carousel.min.css" />
@@ -37,7 +37,7 @@
         <nav class="navbar navbar-expand-lg custom_nav-container ">
           <a class="navbar-brand" href="index.html">
             <span>
-              Seotech
+              Hasindo
             </span>
           </a>
           </a>
@@ -49,31 +49,20 @@
 
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <div class="d-flex mx-auto flex-column flex-lg-row align-items-center">
-              <ul class="navbar-nav  ">
-                <li class="nav-item ">
+              <ul class="navbar-nav d-flex flex-lg-row">
+                <li class="nav-item">
                   <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item active">
                   <a class="nav-link" href="about.html"> About</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="service.html"> Services </a>
+                  <a class="nav-link" href="index.html"> Services </a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#contactLink">Contact Us</a>
+                  <a class="nav-link" href="index.html">Team</a>
                 </li>
               </ul>
-            </div>
-            <div class="quote_btn-container ">
-              <a href="">
-                <img src="images/call.png" alt="">
-                <span>
-                  Call : + 01 1234567890
-                </span>
-              </a>
-              <form class="form-inline">
-                <button class="btn  my-2 my-sm-0 nav_search-btn" type="submit"></button>
-              </form>
             </div>
           </div>
         </nav>
@@ -89,7 +78,7 @@
       <div class="row">
         <div class="col-md-6">
           <div class="img-box">
-            <img src="images/about-img2.png" alt="">
+            <img src="images/TheFoundation-02.png" alt="">
           </div>
         </div>
         <div class="col-md-6">
@@ -100,13 +89,19 @@
               </h2>
             </div>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-              dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+              Yayasan Hasana Mandiri Indonesia adalah Yayasan non profit yang bergerak dibidang Pendidikan, dan Sosial Kemanusiaan. Yayasan ini didirikan atas inisiatif  Bapak Dr. Hasman Budiadi, S.E., M.M., Ibu Setiyowati, S.Kom., M.Kom., dan Ibu Sri Siswanti, S.Kom., M.Kom. Yayasan Hasana Mandiri Indonesia mendapatkan ijin pada tanggal 18 Juli 2024, dengan Akta Notaris No. 14, ijin Kemenkumham: AHU-0011480.AH.01.04.Tahun 2024.
             </p>
-            <a href="">
-              Read More
-            </a>
           </div>
+        </div>
+      </div>
+      <div class="row text-center">
+        <div class="col-md-12">
+            <h2>
+              Struktur Organisasi
+            </h2>
+            <div class="img-box">
+              <img src="images/struktur.png" alt="">
+            </div>
         </div>
       </div>
     </div>
@@ -116,67 +111,19 @@
 
 
   <div class="footer_bg">
-
-    <!-- contact section -->
-    <section class="contact_section layout_padding" id="contactLink">
-      <div class="container">
-        <div class="heading_container">
-          <h2>
-            Get In touch
-          </h2>
-        </div>
-      </div>
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-6 col-md-8 mx-auto">
-            <form>
-              <div class="form-row">
-                <div class="form-group col-md-6">
-                  <input type="text" class="form-control" id="inputName4" placeholder="Name ">
-                </div>
-                <div class="form-group col-md-6">
-                  <input type="email" class="form-control" id="inputEmail4" placeholder="Email id">
-                </div>
-
-              </div>
-              <div class="form-row">
-                <div class="form-group col">
-                  <input type="text" class="form-control" id="inputSubject4" placeholder="Subject">
-                </div>
-              </div>
-              <div class="form-group">
-                <input type="text" class="form-control" id="inputMessage" placeholder="Message">
-              </div>
-              <div class="d-flex justify-content-center">
-                <button type="submit" class="">Send</button>
-              </div>
-            </form>
-          </div>
-        </div>
-      </div>
-    </section>
-
-
-    <!-- end contact section -->
-
-
-
     <!-- info section -->
-    <section class="info_section layout_padding2">
+    <section class="info_section">
       <div class="container">
         <div class="row">
-          <div class="col-md-3">
+          <div class="col-md-4">
             <div class="info_logo">
               <h3>
-                Seotech
+                Hasindo
               </h3>
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor indidunt ut labore et
-                dolore magna
-              </p>
+              <h6> Profesional, Ikhlas, dan Bermanfaat</h6>
             </div>
           </div>
-          <div class="col-md-3">
+          <div class="col-md-4">
             <div class="info_links">
               <h4>
                 BASIC LINKS
@@ -185,19 +132,19 @@
                 <li class=" ">
                   <a class="" href="index.html">Home <span class="sr-only">(current)</span></a>
                 </li>
-                <li class="active">
-                  <a class="" href="about.html"> About</a>
+                <li class="">
+                  <a class="" href="#about"> About</a>
                 </li>
                 <li class="">
-                  <a class="" href="service.html"> Services </a>
+                  <a class="" href="#service"> Services </a>
                 </li>
                 <li class="">
-                  <a class="" href="#contactLink">Contact Us</a>
+                  <a class="" href="#team"> Team </a>
                 </li>
               </ul>
             </div>
           </div>
-          <div class="col-md-3">
+          <div class="col-md-4">
             <div class="info_contact">
               <h4>
                 CONTACT DETAILS
@@ -215,36 +162,9 @@
                   <img src="images/envelope-white.png" width="18px" alt="">
                 </div>
                 <p>
-                  demo@gmail.com
+                  hasindo.foundation@gmail.com
                 </p>
               </a>
-            </div>
-          </div>
-          <div class="col-md-3">
-            <div class="info_form ">
-              <h4>
-                NEWSLETTER
-              </h4>
-              <form action="">
-                <input type="email" placeholder="Enter your email">
-                <button>
-                  Subscribe
-                </button>
-              </form>
-              <div class="social_box">
-                <a href="">
-                  <img src="images/info-fb.png" alt="">
-                </a>
-                <a href="">
-                  <img src="images/info-twitter.png" alt="">
-                </a>
-                <a href="">
-                  <img src="images/info-linkedin.png" alt="">
-                </a>
-                <a href="">
-                  <img src="images/info-youtube.png" alt="">
-                </a>
-              </div>
             </div>
           </div>
         </div>
@@ -258,13 +178,10 @@
     <section class="container-fluid footer_section">
       <div class="container">
         <p>
-          &copy; <span id="displayYear"></span> All Rights Reserved By
-          <a href="https://html.design/">Free Html Templates</a>
-        </p>
+          &copy; <span id="displayYear"></span> All Rights Reserved By <b>Hasana Mandiri Indonesia</b></p>
       </div>
     </section>
     <!-- footer section -->
-
   </div>
 
   <script type="text/javascript" src="js/jquery-3.4.1.min.js"></script>
