--- a/about.html
+++ b/about.html
@@ -57,7 +57,7 @@
                   <a class="nav-link" href="about.html"> About</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="index.html"> Services </a>
+                  <a class="nav-link" href="service.html"> Services </a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="index.html">Team</a>
@@ -133,10 +133,10 @@
                   <a class="" href="index.html">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="">
-                  <a class="" href="#about"> About</a>
+                  <a class="" href="about.html"> About</a>
                 </li>
                 <li class="">
-                  <a class="" href="#service"> Services </a>
+                  <a class="" href="service.html"> Services </a>
                 </li>
                 <li class="">
                   <a class="" href="#team"> Team </a>
