--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   <div class="hero_area">
 
         <!-- header section strats -->
-        <header class="header_section fixed-top" style="background-color: #2484C6;">
+        <header class="header_section fixed-top" style="background-color: #21409A;">
           <div class="container-fluid">
             <nav class="navbar navbar-expand-lg custom_nav-container ">
               <a class="navbar-brand" href="index.html">
@@ -58,7 +58,7 @@
                       <a class="nav-link" href="about.html"> About</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="index.html"> Services </a>
+                      <a class="nav-link" href="service.html"> Services </a>
                     </li>
                     <li class="nav-item">
                       <a class="nav-link" href="index.html">Team</a>
@@ -187,6 +187,11 @@
             </p>
           </div>
         </div>
+    </div>
+    <div class="btn-box">
+      <a href="service.html">
+        Read More
+      </a>
     </div>
   </section>
   <!-- end service section -->
@@ -400,10 +405,10 @@
                   <a class="" href="index.html">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="">
-                  <a class="" href="#about"> About</a>
+                  <a class="" href="about.html"> About</a>
                 </li>
                 <li class="">
-                  <a class="" href="#service"> Services </a>
+                  <a class="" href="service.html"> Services </a>
                 </li>
                 <li class="">
                   <a class="" href="#team"> Team </a>
