--- a/service.html
+++ b/service.html
@@ -12,7 +12,7 @@
   <meta name="description" content="" />
   <meta name="author" content="" />
 
-  <title>Seotech</title>
+  <title>Hasindo</title>
 
   <!-- slider stylesheet -->
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.1.3/assets/owl.carousel.min.css" />
@@ -37,7 +37,7 @@
         <nav class="navbar navbar-expand-lg custom_nav-container ">
           <a class="navbar-brand" href="index.html">
             <span>
-              Seotech
+              Hasindo
             </span>
           </a>
           </a>
@@ -49,8 +49,8 @@
 
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <div class="d-flex mx-auto flex-column flex-lg-row align-items-center">
-              <ul class="navbar-nav  ">
-                <li class="nav-item ">
+              <ul class="navbar-nav d-flex flex-lg-row">
+                <li class="nav-item">
                   <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
@@ -60,20 +60,9 @@
                   <a class="nav-link" href="service.html"> Services </a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#contactLink">Contact Us</a>
+                  <a class="nav-link" href="index.html">Team</a>
                 </li>
               </ul>
-            </div>
-            <div class="quote_btn-container ">
-              <a href="">
-                <img src="images/call.png" alt="">
-                <span>
-                  Call : + 01 1234567890
-                </span>
-              </a>
-              <form class="form-inline">
-                <button class="btn  my-2 my-sm-0 nav_search-btn" type="submit"></button>
-              </form>
             </div>
           </div>
         </nav>
@@ -82,157 +71,111 @@
     <!-- end header section -->
   </div>
 
-  <!-- service section -->
-  <section class="service_section layout_padding">
-    <div class="container-fluid">
+  <!-- about section -->
+
+  <section class="work_section layout_padding">
+    <div class="container">
       <div class="heading_container">
         <h2>
-          Our Services
+          Services
         </h2>
-        <p>
-          consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-        </p>
       </div>
-
-      <div class="service_container">
-        <div class="box">
-          <div class="img-box">
-            <img src="images/s-1.png" alt="">
-          </div>
-          <div class="detail-box">
-            <h5>
-              Brand Promotion
-            </h5>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-            </p>
+      <div class="row">
+        <div class="col-md-12">
+          <div class="detail_container">
+            <div class="box b-1">
+              <div class="box" id="service">
+                <div class="img-box">
+                  <img src="images/s-1.png" alt="">
+                </div>
+                <div class="detail-box">
+                  <h5>
+                    Sosial
+                  </h5>
+                  <p>
+                  Di bidang sosial meliputi:   
+                    <ol>
+                      <li>Pemberdayaan Perempuan; </li>
+                      <li>Pemberdayaan Pemuda;</li>
+                      <li>Pengembangan Sumber Daya Manusia pada umumnya;</li>
+                      <li>Pendampingan Usaha Mikro, Kecil dan Menengah;</li>
+                      <li>Menyelenggarakan Lembaga pendidikan formal dan nonformal;</li>
+                      <li>Konsultan Ekonomi, Bisnis, Sosial dan Politik;</li>
+                      <li>Rumah Sakit, Poliklinik dan Laboratorium;</li>
+                      <li>Panti Asuhan, Panti Jompo dan Panti Werda;</li>
+                      <li>Pembinaan Olahraga;</li>
+                      <li>Study Banding;</li>
+                    </ol>
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="box b-1">
+              <div class="box" id="service">
+                <div class="img-box">
+                  <img src="images/s-2.png" alt="">
+                </div>
+                <div class="detail-box">
+                  <h5>
+                    Publikasi dan IPTEK               
+                  </h5>
+                  <p>
+                  Di bidang Publikasi dan IPTEK meliputi:   
+                    <ol>
+                      <li>Penerbitan Jurnal Ilmiah;</li>
+                      <li>Penelitian dan Pengembangan Ilmu Pengetahuan dan Teknologi (IPTEK); </li>
+                      <li>Menyelenggarakan Pelatihan (Workshop) Bidang Teknologi Informasi, Pengembangan Usaha dan Ekonomi Kreatif;</li>
+                      <li>Menyelenggarakan Seminar Bidang Teknologi Informasi, Pengembangan Usaha dan Ekonomi Kreatif;</li>
+                      <li>Pemanfaatan IPTEK untuk Promosi (Video Promosi, Digital Marketing)</li>
+                    </ol>
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="box b-1">
+              <div class="box" id="service">
+                <div class="img-box">
+                  <img src="images/s-3.png" alt="">
+                </div>
+                <div class="detail-box">
+                  <h5>
+                    Kemanusiaan
+                  </h5>
+                  <p>
+                  Di bidang Kemanusiaan meliputi:   
+                    <ol>
+                      <li>Memberi Bantuan Kepada Korban Bencana Alam;</li>
+                      <li>Memberi Bantuan Kepada Tuna Wisma, Fakir Miskin, Gelandangan dan Anak Yatim Piatu, serta Masyarakat lain yang membutuhkan;</li>
+                      <li>Memberikan dan Menyelenggarakan Rumah Singgah dan   Rumah Duka;   </li>
+                      <li>Memberikan Perlindungan Konsumen;</li>
+                      <li>Melestarikan Lingkungan Hidup.</li>
+                    </ol>
+                  </p>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
-        <div class="box">
-          <div class="img-box">
-            <img src="images/s-2.png" alt="">
-          </div>
-          <div class="detail-box">
-            <h5>
-              Video Marketing
-
-            </h5>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-            </p>
-          </div>
-        </div>
-        <div class="box">
-          <div class="img-box">
-            <img src="images/s-3.png" alt="">
-          </div>
-          <div class="detail-box">
-            <h5>
-              Site Analysis
-            </h5>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-            </p>
-          </div>
-        </div>
-        <div class="box">
-          <div class="img-box">
-            <img src="images/s-4.png" alt="">
-          </div>
-          <div class="detail-box">
-            <h5>
-              Social Media Marketing
-            </h5>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-            </p>
-          </div>
-        </div>
-        <div class="box">
-          <div class="img-box">
-            <img src="images/s-5.png" alt="">
-          </div>
-          <div class="detail-box">
-            <h5>
-              SEO Optimization
-            </h5>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-            </p>
-          </div>
-        </div>
-      </div>
-      <div class="btn-box">
-        <a href="">
-          Read More
-        </a>
       </div>
     </div>
   </section>
-  <!-- end service section -->
+
+
 
   <div class="footer_bg">
-
-    <!-- contact section -->
-    <section class="contact_section layout_padding" id="contactLink">
-      <div class="container">
-        <div class="heading_container">
-          <h2>
-            Get In touch
-          </h2>
-        </div>
-      </div>
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-6 col-md-8 mx-auto">
-            <form>
-              <div class="form-row">
-                <div class="form-group col-md-6">
-                  <input type="text" class="form-control" id="inputName4" placeholder="Name ">
-                </div>
-                <div class="form-group col-md-6">
-                  <input type="email" class="form-control" id="inputEmail4" placeholder="Email id">
-                </div>
-
-              </div>
-              <div class="form-row">
-                <div class="form-group col">
-                  <input type="text" class="form-control" id="inputSubject4" placeholder="Subject">
-                </div>
-              </div>
-              <div class="form-group">
-                <input type="text" class="form-control" id="inputMessage" placeholder="Message">
-              </div>
-              <div class="d-flex justify-content-center">
-                <button type="submit" class="">Send</button>
-              </div>
-            </form>
-          </div>
-        </div>
-      </div>
-    </section>
-
-
-    <!-- end contact section -->
-
-
-
     <!-- info section -->
-    <section class="info_section layout_padding2">
+    <section class="info_section">
       <div class="container">
         <div class="row">
-          <div class="col-md-3">
+          <div class="col-md-4">
             <div class="info_logo">
               <h3>
-                Seotech
+                Hasindo
               </h3>
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor indidunt ut labore et
-                dolore magna
-              </p>
+              <h6> Profesional, Ikhlas, dan Bermanfaat</h6>
             </div>
           </div>
-          <div class="col-md-3">
+          <div class="col-md-4">
             <div class="info_links">
               <h4>
                 BASIC LINKS
@@ -244,16 +187,16 @@
                 <li class="">
                   <a class="" href="about.html"> About</a>
                 </li>
-                <li class="active">
+                <li class="">
                   <a class="" href="service.html"> Services </a>
                 </li>
                 <li class="">
-                  <a class="" href="#contactLink">Contact Us</a>
+                  <a class="" href="#team"> Team </a>
                 </li>
               </ul>
             </div>
           </div>
-          <div class="col-md-3">
+          <div class="col-md-4">
             <div class="info_contact">
               <h4>
                 CONTACT DETAILS
@@ -271,36 +214,9 @@
                   <img src="images/envelope-white.png" width="18px" alt="">
                 </div>
                 <p>
-                  demo@gmail.com
+                  hasindo.foundation@gmail.com
                 </p>
               </a>
-            </div>
-          </div>
-          <div class="col-md-3">
-            <div class="info_form ">
-              <h4>
-                NEWSLETTER
-              </h4>
-              <form action="">
-                <input type="email" placeholder="Enter your email">
-                <button>
-                  Subscribe
-                </button>
-              </form>
-              <div class="social_box">
-                <a href="">
-                  <img src="images/info-fb.png" alt="">
-                </a>
-                <a href="">
-                  <img src="images/info-twitter.png" alt="">
-                </a>
-                <a href="">
-                  <img src="images/info-linkedin.png" alt="">
-                </a>
-                <a href="">
-                  <img src="images/info-youtube.png" alt="">
-                </a>
-              </div>
             </div>
           </div>
         </div>
@@ -314,13 +230,10 @@
     <section class="container-fluid footer_section">
       <div class="container">
         <p>
-          &copy; <span id="displayYear"></span> All Rights Reserved By
-          <a href="https://html.design/">Free Html Templates</a>
-        </p>
+          &copy; <span id="displayYear"></span> All Rights Reserved By <b>Hasana Mandiri Indonesia</b></p>
       </div>
     </section>
     <!-- footer section -->
-
   </div>
 
   <script type="text/javascript" src="js/jquery-3.4.1.min.js"></script>
