--- a/index.html
+++ b/index.html
@@ -98,9 +98,6 @@
         </div>
       </div>
     </section>
-    
-    
-    <!-- end slider section -->
   </div>
 
   <!-- about section -->
@@ -157,7 +154,7 @@
               Sosial
             </h5>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+              Berkomitmen untuk memberikan dampak positif bagi masyarakat melalui berbagai program sosial yang bertujuan meningkatkan kualitas hidup dan kesejahteraan bersama.
             </p>
           </div>
         </div>
@@ -170,7 +167,7 @@
               Publikasi
             </h5>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+              Berkomitmen untuk mendorong perkembangan ilmu pengetahuan dan teknologi melalui berbagai inisiatif dan program.
             </p>
           </div>
         </div>
@@ -183,7 +180,7 @@
               Kemanusiaan
             </h5>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+              Berkomitmen kuat untuk memberikan bantuan kemanusiaan bagi masyarakat yang membutuhkan.
             </p>
           </div>
         </div>
